<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="extensions_title">SnowHouse</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="hardware_category">Hardware</string>
    <string name="build_tweaks_summary_title">Things are really cold here!</string>
    <string name="listview">ListView</string>
    <string name="misc_category">Misc Settings</string>
    <string name="fingerprint_category">FP Sensor</string>
    <string name="statusbar_clock">Clocks</string>
    <string name="qs_category">Quick Settings</string>
    <string name="power_key">Power Button</string>
    <string name="volume_keys">Volume Buttons</string>
    <string name="lockscreen_gestures_category">LockScreen Gesture</string>
    <string name="battery_settings_title">Battery Settings</string>
    <string name="gestures_category">Gestures Customizations</string>
    <string name="extensions_dialog_title">Help us help you!</string>
    <string name="extensions_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="extensions_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="double_tap_sleep_gesture_title">Tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to put the device to sleep</string>
    <string name="lockscreen_tweaks_category_title">What to do</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_style_title">Select VoLTE Icon</string>
    <string name="volte_icon_asus">VoLTE Asus Icon</string>
    <string name="volte_icon_vo">Vo Only Icon</string>
    <string name="volte_icon_volte">VoLTE Icon</string>
    <string name="volte_icon_oos">VoLTE OOS Icon</string>
    <string name="volte_icon_hd">HD Icon</string>
    <string name="volte_icon_hd2">HD CAF Icon</string>
    <string name="volte_icon_miui">MIUI 11 Icon</string>
    <string name="volte_icon_emui">EMUI Icon</string>
    <string name="volte_icon_margaritov">HD Filled Icon</string>
    <string name="volte_icon_margaritov2">Margaritov VoLTE Icon</string>
    <string name="volte_icon_vivo">Vivo Icon</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_enabled">VoWiFi icon enabled</string>
    <string name="vowifi_icon_disabled">VoWiFi icon disabled</string>
    <string name="vowifi_icon_enabled_volte_disabled">VoWiFi instead of VoLTE icon</string>
    <string name="vowifi_icon_style_title">VoWiFi icon style</string>
    <string name="vowifi_icon_default">Default Icon</string>
    <string name="vowifi_icon_emui">EMUI Icon</string>
    <string name="vowifi_icon_asus">Asus Icon</string>
    <string name="vowifi_icon_oneplus">OOS Icon</string>
    <string name="vowifi_icon_moto">Motorola Icon</string>
    <string name="vowifi_icon_simple1">Simple1 Icon</string>
    <string name="vowifi_icon_simple2">Simple2 Icon</string>
    <string name="vowifi_icon_simple3">Simple3 Icon</string>
    <string name="vowifi_icon_vivo">Vivo Icon</string>
    <string name="vowifi_icon_margaritov">Margaritov Icon</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="fprint_sucess_vib_title">Fingerprint success vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on failed fingerprint authentication</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="status_bar_clock_title">Clock &amp; Date Settings</string>
    <string name="status_bar_clock">Clock &amp; Date</string>
    <string name="clock_enabled">Enabled</string>
    <string name="clock_disabled">Disabled</string>
    <string name="statusbar_clock_style_title">Clock &amp; date position</string>
    <string name="statusbar_clock_style_right">Right</string>
    <string name="statusbar_clock_style_centre">Centre</string>
    <string name="statusbar_clock_style_left">Left</string>
    <string name="status_bar_clock_style_reset">Reset color</string>
    <string name="status_bar_show_clock_title">Show clock &amp; date</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="dont_show">Don\'t show</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="am_pm_clock_normal">Normal font size</string>
    <string name="am_pm_clock_small">Small font size</string>
    <string name="am_pm_clock_none">Don\'t show</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="battery_style_category_title">Battery styles</string>
    <string name="battery_percent_title">Battery percent</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait (default)</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Circle (Dotted)</string>
    <string name="status_bar_battery_style_filled_circle">Circle (Filled)</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="qs_show_battery_estimate_title">Battery estimates</string>
    <string name="qs_show_battery_estimate_summary">Show estimated remaining battery life next to the icon</string>
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="qs_brightness_slider_category">Brightness slider</string>
    <string name="qs_brightness_slider_title">Show brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="qs_brightness_position_bottom_title">Show brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
    <string name="brightness_icon_title">Adaptive brightness button</string>
    <string name="brightness_icon_summary">Show adaptive brightness button</string>
    <string name="quick_qs_brightness_slider_title">Show brightness slider in Quick QS Panel</string>
    <string name="quick_qs_brightness_slider_summary">Show a brightness slider in the quick qs panel</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="combined_status_bar_signal_icons">Combined signal icons</string>
    <string name="combined_status_bar_signal_icons_summary">Enable combined signal icons in statusbar</string>
    <string name="traffic_title">Traffic Indicators</string>
    <string name="use_old_mobiletype_title">Small mobile type icon</string>
    <string name="use_old_mobiletype_summary">Show mobile type icon on top of the signal indicator</string>
</resources>