<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2017 The Dirty Unicorns Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

   <PreferenceCategory
        android:key="statusbar_category"
        android:title="@string/status_bar_category">

	<Preference
            android:key="systemui_tuner_statusbar"
            android:title="@string/statusbar_items_title" >
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.StatusbarItemsActivity" />
        </Preference>

        <Preference
            android:key="traffic"
            android:fragment="org.pixelextended.snowhouse.fragments.Traffic"
            android:title="@string/traffic_title" />

         <com.android.settings.custom.preference.SystemSettingSwitchPreference
             android:key="show_fourg_icon"
             android:title="@string/show_fourg_icon_title"
             android:summary="@string/show_fourg_icon_summary"
             android:defaultValue="false"/>

         <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="use_old_mobiletype"
            android:title="@string/use_old_mobiletype_title"
            android:summary="@string/use_old_mobiletype_summary"
            android:defaultValue="false" />  

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="show_combined_status_bar_signal_icons"
            android:title="@string/combined_status_bar_signal_icons"
            android:summary="@string/combined_status_bar_signal_icons_summary"
            android:defaultValue="true" />

         <com.android.settings.custom.preference.SystemSettingSwitchPreference
             android:key="volte_icon"
             android:title="@string/volte_icon_title"
             android:summary="@string/volte_icon_summary"
             android:defaultValue="true"
             android:dependency="show_combined_status_bar_signal_icons"/>
	   
	 <com.android.settings.custom.preference.SystemSettingListPreference
             android:key="volte_icon_style"
             android:title="@string/volte_icon_style_title"
             android:entries="@array/volte_icon_type_entries"
             android:entryValues="@array/volte_icon_type_values"
             android:summary="%s"
             android:defaultValue="0"
	     android:dependency="volte_icon"/>

         <com.android.settings.custom.preference.SystemSettingListPreference
             android:key="vowifi_icon"
             android:title="@string/vowifi_icon_title"
             android:entries="@array/vowifi_icon_entries"
             android:entryValues="@array/vowifi_icon_values"
             android:summary="%s"
             android:defaultValue="0"/>

         <com.android.settings.custom.preference.SystemSettingListPreference
             android:key="vowifi_icon_style"
             android:title="@string/vowifi_icon_style_title"
             android:entries="@array/vowifi_icon_style_entries"
             android:entryValues="@array/vowifi_icon_style_values"
             android:summary="%s"
             android:defaultValue="0"/>

         <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/double_tap_sleep_gesture_title"
            android:summary="@string/double_tap_sleep_gesture_summary"
            android:defaultValue="false" />

	</PreferenceCategory>

         <PreferenceCategory
            android:title="@string/statusbar_clock">

              <Preference
	        android:fragment="org.pixelextended.snowhouse.fragments.ClockOptions"
	        android:key="clock_options_category"
	        android:summary="@string/clock_options_summary"
	        android:title="@string/clock_options_title" />
    </PreferenceCategory>

   <PreferenceCategory
        android:key="battery_style_category"
        android:title="@string/battery_style_category_title" >

    <com.android.settings.custom.preference.SystemSettingListPreference
	    android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="0" />

    <com.android.settings.custom.preference.SystemSettingListPreference
	    android:key="status_bar_show_battery_percent"
            android:title="@string/battery_percent_title"
            android:dialogTitle="@string/battery_percent_title"
            android:entries="@array/battery_percent_entries"
            android:entryValues="@array/battery_percent_values"
            android:defaultValue="0" />

     <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="qs_show_battery_estimate"
            android:title="@string/qs_show_battery_estimate_title"
            android:summary="@string/qs_show_battery_estimate_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

   <PreferenceCategory
        android:key="qs_category"
        android:title="@string/qs_category">

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="quick_settings_vibrate"
            android:title="@string/quick_settings_vibrate_title"
            android:summary="@string/quick_settings_vibrate_summary"
            android:defaultValue="false"/>

        <ListPreference
            android:key="status_bar_quick_qs_pulldown"
            android:title="@string/status_bar_quick_qs_pulldown"
            android:entries="@array/quick_pulldown_entries"
            android:entryValues="@array/quick_pulldown_values"
            android:defaultValue="0" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
        
    </PreferenceCategory>

    <PreferenceCategory
        android:key="quick_settings_brighness_category"
        android:title="@string/qs_brightness_slider_category">

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_show_brightness"
            android:title="@string/qs_brightness_slider_title"
            android:summary="@string/qs_brightness_slider_summary"
            android:defaultValue="true"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="sysui_qqs_brightness_slider"
            android:title="@string/quick_qs_brightness_slider_title"
            android:summary="@string/quick_qs_brightness_slider_summary"
            android:dependency="qs_show_brightness"
            android:defaultValue="false"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness_button"
            android:title="@string/brightness_icon_title"
            android:summary="@string/brightness_icon_summary"
            android:defaultValue="true"
            android:dependency="qs_show_brightness"/>

        <com.android.settings.custom.preference.SecureSettingSwitchPreference
            android:key="qs_brightness_position_bottom"
            android:title="@string/qs_brightness_position_bottom_title"
            android:summary="@string/qs_brightness_position_bottom_summary"
            android:defaultValue="false"
            android:dependency="qs_show_brightness" />

    </PreferenceCategory>

</PreferenceScreen>
