<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <Preference
        android:key="button_settings"
        android:title="@string/button_pref_title"
        android:order="-249"
        android:fragment="com.android.settings.custom.buttons.ButtonSettings"/>

    <PreferenceCategory
        android:key="lockscreen_ui_finterprint_category"
        android:title="@string/fingerprint_category">

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="fingerprint_success_vib"
        android:title="@string/fprint_sucess_vib_title"
        android:summary="@string/fprint_sucess_vib_summary"
        android:persistent="true" />

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="fingerprint_error_vib"
        android:title="@string/fprint_error_vib_title"
        android:summary="@string/fprint_error_vib_summary"
        android:persistent="true" />

    </PreferenceCategory>

</PreferenceScreen>
